--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -184,9 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'city_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-d8b275e67a33>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Convert the array of dictionaries to a Pandas DataFrame.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcity_data_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcity_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mcity_data_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'city_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Convert the array of dictionaries to a Pandas DataFrame.\n",
     "city_data_df = pd.DataFrame(city_data)\n",
@@ -224,14 +236,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City_ID       591\n",
+       "City          591\n",
+       "Country       586\n",
+       "Date          591\n",
+       "Lat           591\n",
+       "Lng           591\n",
+       "Max Temp      591\n",
+       "Humidity      591\n",
+       "Cloudiness    591\n",
+       "Wind Speed    591\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Load the new CSV file and make a new PD with it\n",
     "#so you don't need to rerun the above programs.\n",
     "city_data_to_load = \"weather_data/cities.csv\"\n",
-    "city_data_df = pd.read_csv(city_data_to_load)"
+    "city_data_df = pd.read_csv(city_data_to_load)\n",
+    "city_data_df.count()"
    ]
   },
   {
