--- a/Vacation_Search/Vacation_Search.ipynb
+++ b/Vacation_Search/Vacation_Search.ipynb
@@ -705,13 +705,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a2ae429610b47d1b7808d62549e6154",
+       "model_id": "dce66eff50ac40fcbec417550e555677",
        "version_major": 2,
        "version_minor": 0
       },
@@ -731,7 +731,7 @@
     "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
     "             max_intensity=300, point_radius=4)\n",
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
-    "fig.add_layer(heat_layer)\n",
+    "#fig.add_layer(heat_layer)\n",
     "fig.add_layer(marker_layer)\n",
     "\n",
     "# Call the figure to plot the data.\n",
