--- a/Vacation_Itinerary/Vacation_Itinerary_starter_code.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary_starter_code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,40 +27,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Avarua</td>\n",
+       "      <td>CK</td>\n",
+       "      <td>82.45</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-21.2078</td>\n",
+       "      <td>-159.7750</td>\n",
+       "      <td>Paradise Inn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Kavieng</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>80.83</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>-2.5744</td>\n",
+       "      <td>150.7967</td>\n",
+       "      <td>Nusa Island Retreat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Sinnar</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>84.24</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>13.5691</td>\n",
+       "      <td>33.5672</td>\n",
+       "      <td>هجو الطاهر</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Hithadhoo</td>\n",
+       "      <td>MV</td>\n",
+       "      <td>81.23</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-0.6000</td>\n",
+       "      <td>73.0833</td>\n",
+       "      <td>Scoop Guest House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Villarrica</td>\n",
+       "      <td>PY</td>\n",
+       "      <td>73.27</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-25.7500</td>\n",
+       "      <td>-56.4333</td>\n",
+       "      <td>Mansión Reljuv Tours SA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
+       "0       12      Avarua      CK     82.45     overcast clouds -21.2078   \n",
+       "1       16     Kavieng      PG     80.83          light rain  -2.5744   \n",
+       "2       17      Sinnar      SD     84.24          few clouds  13.5691   \n",
+       "3       18   Hithadhoo      MV     81.23    scattered clouds  -0.6000   \n",
+       "4       19  Villarrica      PY     73.27     overcast clouds -25.7500   \n",
+       "\n",
+       "        Lng               Hotel Name  \n",
+       "0 -159.7750             Paradise Inn  \n",
+       "1  150.7967      Nusa Island Retreat  \n",
+       "2   33.5672               هجو الطاهر  \n",
+       "3   73.0833        Scoop Guest House  \n",
+       "4  -56.4333  Mansión Reljuv Tours SA  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Read the WeatherPy_vacation.csv into a DataFrame.\n",
-    "# vacation_df = pd.read_csv(\"Vacation_Search/WeatherPy_vacation.csv\")\n",
-    "# vacation_df.head()"
+    "vacation_df = pd.read_csv(\"WeatherPy_Vacation.csv\")\n",
+    "vacation_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2. Using the template add the city name, the country code, the weather description and maximum temperature for the city.\n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Weather</dt><dd>{Current Description}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in vacation_df.iterrows()]\n",
     "\n",
     "# 3b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]"
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b2c030acb424b1aa7d939c76eb0c40a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 4a. Add a marker layer for each city to the map.\n",
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = vacation_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(-29.0, -57.0), zoom_level=3.8)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "#fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
+    "\n",
+    "# Call the figure to plot the data.\n",
+    "fig\n",
     "\n",
     "# 4b. Display the figure\n",
     "\n"
@@ -68,70 +211,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>674</td>\n",
+       "      <td>Antofagasta</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>72.68</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-23.65</td>\n",
+       "      <td>-70.4</td>\n",
+       "      <td>Holiday Inn Express Antofagasta, an IHG Hotel</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     City_ID         City Country  Max Temp Current Description    Lat   Lng  \\\n",
+       "247      674  Antofagasta      CL     72.68     overcast clouds -23.65 -70.4   \n",
+       "\n",
+       "                                        Hotel Name  \n",
+       "247  Holiday Inn Express Antofagasta, an IHG Hotel  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# From the map above pick 4 cities and create a vacation itinerary route to travel between the four cities. \n",
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[]\n",
-    "vacation_end = vacation_df.loc[]\n",
-    "vacation_stop1 = vacation_df.loc[]\n",
-    "vacation_stop2 = vacation_df.loc[] \n",
-    "vacation_stop3 = vacation_df.loc[] "
+    "Chile_city = vacation_df[\"City\"]\n",
+    "\n",
+    "vacation_start = vacation_df.loc[Chile_city == \"Antofagasta\"]\n",
+    "vacation_end = vacation_df.loc[Chile_city == \"Antofagasta\"]\n",
+    "vacation_stop1 = vacation_df.loc[Chile_city == \"Coquimbo\"]\n",
+    "vacation_stop2 = vacation_df.loc[Chile_city == \"Cabrero\"] \n",
+    "vacation_stop3 = vacation_df.loc[Chile_city == \"Ancud\"] \n",
+    "vacation_start"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-23.65, -70.4 ])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = \n",
-    "end = \n",
-    "stop1 = \n",
-    "stop2 = \n",
-    "stop3 = "
+    "start = vacation_start[[\"Lat\", \"Lng\"]].to_numpy()\n",
+    "end = vacation_end[[\"Lat\", \"Lng\"]].to_numpy()\n",
+    "stop1 = vacation_stop1[[\"Lat\", \"Lng\"]].to_numpy()\n",
+    "stop2 = vacation_stop2[[\"Lat\", \"Lng\"]].to_numpy()\n",
+    "stop3 = vacation_stop3[[\"Lat\", \"Lng\"]].to_numpy()\n",
+    "start[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcd153b1b4da4965a69f76d26cdbd7d7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
-    "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "\n"
+    "# 7. Create a direction layer map using the start and end latitude-\n",
+    "#longitude pairs,and stop1, stop2, and stop3 as the waypoints. \n",
+    "#The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
+    "fig = gmaps.figure()\n",
+    "Chile_travel = gmaps.directions_layer(\n",
+    "    start[0], end[0], waypoints=[stop1[0], stop2[0], stop3[0]], \n",
+    "    travel_mode='DRIVING')\n",
+    "fig.add_layer(Chile_travel)\n",
+    "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Current Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>674</td>\n",
+       "      <td>Antofagasta</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>72.68</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-23.6500</td>\n",
+       "      <td>-70.4000</td>\n",
+       "      <td>Holiday Inn Express Antofagasta, an IHG Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>347</td>\n",
+       "      <td>Coquimbo</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>71.33</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-29.9533</td>\n",
+       "      <td>-71.3436</td>\n",
+       "      <td>Hostel Del Puerto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>531</td>\n",
+       "      <td>Cabrero</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>80.55</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-37.0333</td>\n",
+       "      <td>-72.4000</td>\n",
+       "      <td>Hotel San Martin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>227</td>\n",
+       "      <td>Ancud</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>73.42</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>-41.8697</td>\n",
+       "      <td>-73.8203</td>\n",
+       "      <td>Hotel Arena Gruesa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID         City Country  Max Temp Current Description      Lat  \\\n",
+       "0      674  Antofagasta      CL     72.68     overcast clouds -23.6500   \n",
+       "1      347     Coquimbo      CL     71.33           clear sky -29.9533   \n",
+       "2      531      Cabrero      CL     80.55           clear sky -37.0333   \n",
+       "3      227        Ancud      CL     73.42       broken clouds -41.8697   \n",
+       "\n",
+       "       Lng                                     Hotel Name  \n",
+       "0 -70.4000  Holiday Inn Express Antofagasta, an IHG Hotel  \n",
+       "1 -71.3436                              Hostel Del Puerto  \n",
+       "2 -72.4000                               Hotel San Martin  \n",
+       "3 -73.8203                             Hotel Arena Gruesa  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. To create a marker layer map between the four cities.\n",
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
-    "itinerary_df = pd.concat([],ignore_index=True)\n",
+    "itinerary_df = pd.concat([vacation_start, vacation_stop1, vacation_stop2, vacation_stop3],ignore_index=True)\n",
     "itinerary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9 Using the template add city name, the country code, the weather description and maximum temperature for the city. \n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Weather</dt><dd>{Current Description}\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
+    "\n",
     "\n",
     "# 10a Get the data from each row and add it to the formatting template and store the data in a list.\n",
     "hotel_info = [info_box_template.format(**row) for index, row in itinerary_df.iterrows()]\n",
@@ -142,13 +487,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82c402fe340e4b709ae73b84c47acb69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
+    "fig = gmaps.figure()\n",
+    "Chile_travel = gmaps.directions_layer(\n",
+    "    start[0], end[0], waypoints=[stop1[0], stop2[0], stop3[0]], \n",
+    "    travel_mode='DRIVING')\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(Chile_travel)\n",
+    "fig.add_layer(marker_layer)\n",
+    "# 11b. Display the figure\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "faf4ec9ac3294154a286ff23589ca82a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#For some reason I can't get the marker layer and the directions\n",
+    "#layer to both show up at the same time.\n",
     "\n",
-    "# 11b. Display the figure\n"
+    "fig = gmaps.figure()\n",
+    "Chile_travel = gmaps.directions_layer(\n",
+    "    start[0], end[0], waypoints=[stop1[0], stop2[0], stop3[0]], \n",
+    "    travel_mode='DRIVING')\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "#fig.add_layer(Chile_travel)\n",
+    "fig.add_layer(marker_layer)\n",
+    "# 11b. Display the figure\n",
+    "fig"
    ]
   },
   {
